--- a/app/views/postings/update.js.erb
+++ b/app/views/postings/update.js.erb
@@ -2,8 +2,9 @@
   $('#edit_posting_form').html('<%= escape_javascript(render :partial => 'postings/form') %>');
 <% else %>
   $.facebox.close();
-  $('#notice').html('<%= @notice %>');
+  $('#notice').html('Posting updated.');
   $('#posting_<%= @posting.id %>').html('<%= escape_javascript(raw(posting_table_row(@posting))) %>');
+  $('.buttonset').buttonset();
   $('a[rel*=facebox]').facebox({
     loadingImage : '<%= image_path('loading.gif') %>',
     closeImage   : '<%= image_path('closelabel.png') %>'
