Minor layout changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
         <%= yield %>
       </div>
     </div>
+    <div id="footer" class="prepend-3 span-21 last">
+      <p>Copyright 2011 Green Gorillas</p>
+    </div>
   </div>
 </body>
 </html>
