--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -75,6 +75,7 @@ div.field, div.actions {
 #content {
   padding-top: 20px;
   background-color: white;
+  min-height: 500px;
 }
 
 #search { margin-bottom: 10px; }
@@ -95,7 +96,9 @@ ul.nav { margin: 0px; }
 .nav li a {
   color: #d60062;
 	display: block;
-	padding: 15px 8px 15px 8px;
+	padding: 15px 0px 15px 0px;
+	width: 100px;
+	text-align: center;
 	text-decoration: none;
 	font-weight: bold;
 }
@@ -113,7 +116,7 @@ ul.nav { margin: 0px; }
 .nav li a:hover.current { background-color: white; }
 
 #sidenav .nav li a {
-  padding: 15px 50px 15px 8px;
+  margin-left: 20px;
 }
 
 input.blur {
@@ -152,3 +155,9 @@ table tbody tr.even td {
 }
 
 .button { margin-bottom: 10px; }
+
+#footer p {
+  margin-top: 10px; 
+  text-align: center; 
+  font-size: small;
+}
