--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 </div>
 
+<%= will_paginate @postings %>
+
 <table id="posting_list">
   <tr>
     <th>Description</th>
@@ -28,3 +30,4 @@
 <% end %>
 </table>
 
+<%= will_paginate @postings %>
