Added exception notification and a feedback form for users.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
 <body>
   <div class="container">
     <div id="header" class="span-24 last">
-      <div id="logo" class="span-4">Uswap</div>
-      <div id="login" class="prepend-16 span-4 last"><%= login_link %></div>
+      <div id="logo" class="span-4"><%= link_to('Uswap', home_path) %></div>
+      <div id="login" class="prepend-16 span-4 last"><%= login_link %><br/><%= link_to('Feedback',feedback_path) %></div>
     </div>
     <div id="topnav" class="prepend-3 span-21 last">
       <ul class="nav">
