--- a/app/views/feedback/index.html.erb
+++ b/app/views/feedback/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Feedback#index</h1>
-<p>Find me in app/views/feedback/index.html.erb</p>
+<h2>Penny for Your Thoughts?</h2>
+<%= render :partial => 'form' %>
