--- a/app/views/feedback/index.html.erb
+++ b/app/views/feedback/index.html.erb
@@ -1,2 +1,7 @@
+<%= javascript_include_tag 'application' %>
+
 <h2>Penny for Your Thoughts?</h2>
+
+<p>Help us make shareon.it better for you!</p>
+
 <%= render :partial => 'form' %>
