--- a/app/views/postings/edit.html.erb
+++ b/app/views/postings/edit.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag 'application' %>
+
 <h1>Edit Posting</h1>
 
 <div id="edit_posting_form"><%= render :partial => 'postings/form' %></div>
