--- a/app/views/postings/new.html.erb
+++ b/app/views/postings/new.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag 'application' %>
+
 <h1>New Posting</h1>
 
 <div id="new_posting_form"><%= render :partial => 'postings/form' %></div>
