--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
-<h1>Register</h1>
+<%= javascript_include_tag 'application' %>
 
+<h1>Register</h1>
 
 <div id="new_user_form"><%= render :partial => 'users/form' %></div>
 
