--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,12 +15,12 @@ pre {
 }
 
 a { color: #000; }
+
 a:visited { color: #666; }
+
 a:hover { color: #fff; background-color:#000; }
 
-div.field, div.actions {
-  margin-bottom: 10px;
-}
+div.field, div.actions { margin-bottom: 10px; }
 
 #notice, #offer_notice {
   color: green;
@@ -81,24 +81,25 @@ div.field, div.actions {
 
 #search { margin-bottom: 10px; }
 
-.nav {
+ul.nav {
 	width: 100%;
 	float: left;
 	padding: 0;
 	list-style: none;
+	margin: 0px;
 }
 
-ul.nav { margin: 0px; }
+.nav li { float: left; }
 
-.nav li {
-	float: left;
-}
+#topnav .nav li { margin-right: 20px; }
+
+#sidenav .nav li { margin-bottom: 10px; }
 
 .nav li a {
   color: #d60062;
 	display: block;
 	padding: 15px 0px 15px 0px;
-	width: 100px;
+	width: 80px;
 	text-align: center;
 	text-decoration: none;
 	font-weight: bold;
@@ -121,10 +122,6 @@ ul.nav { margin: 0px; }
 
 .nav li a:hover.current { background-color: white; }
 
-input.blur {
-  color: gray;
-}
-
 table {
   border-collapse: collapse;
   width: 100%;
@@ -138,18 +135,12 @@ th {
   background-color: #485156;
 }
 
-tr {
-  border: 1px solid silver;
-}
+tr { border: 1px solid silver; }
 
 td {
 	padding: 0.5em;
 	border: 1px solid silver;
 	background-color: white;
-}
-
-.buttonset { 
-  padding: 5px 0px 5px 5px; 
 }
 
 table tbody tr:nth-child(even) td,
@@ -158,6 +149,8 @@ table tbody tr.even td {
 }
 
 .button { margin-bottom: 10px; }
+
+.buttonset { padding: 5px 0px 5px 5px; }
 
 #footer p {
   margin-top: 10px; 
