Made application.js dynamic by adding it to home controller. Needed to do this for facebox images to be relative to RAILS_ROOT.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= stylesheet_link_tag 'custom-theme/jquery-ui.custom.css' %>
   <%= stylesheet_link_tag 'facebox', :media => 'screen' %>
   <%= stylesheet_link_tag 'main' %>
-  <%= javascript_include_tag 'jquery.min', 'jquery-ui.min', 'facebox', 'rails', 'application' %>
+  <%= javascript_include_tag 'jquery.min', 'jquery-ui.min', 'facebox', 'rails', application_js_path %>
   <%= yield :head %>
   <%= csrf_meta_tag %>
 </head>
