More CSS changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,9 @@
 <body>
   <div class="container">
     <div id="header" class="span-24 last">
-      <div id="logo" class="span-4"><%= link_to('Uswap', root_path) %></div>
-      <div id="login" class="prepend-16 span-4 last">
-        <%= login_link %><br/>
-        <%= link_to 'Provide Feedback!', feedback_path, :rel => 'facebox' %>
+      <div id="logo" class="prepend-2 span-18"><%= link_to image_tag('logo.gif'), root_path %></div>
+      <div id="login" class="span-4 last">
+        <%= login_link %>
       </div>
     </div>
     <div id="topnav" class="prepend-2 span-22 last">
