--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Uswap</title>
+  <title>Shareon.it</title>
   <%= stylesheet_link_tag 'blueprint/screen.css', :media => 'screen, projection' %>
   <%= stylesheet_link_tag 'blueprint/print.css', :media => 'print' %>
   <!–[if IE]><%= stylesheet_link_tag 'blueprint/ie.css', :media => 'screen, projection' %><![endif]–>
-  <%= stylesheet_link_tag 'custom-theme/jquery-ui.custom.css' %>
   <%= stylesheet_link_tag 'facebox', :media => 'screen' %>
+  <%= stylesheet_link_tag 'custom-theme/jquery-ui-custom.css' %>
   <%= stylesheet_link_tag 'main' %>
-  <%= javascript_include_tag 'jquery.min', 'jquery-ui.min', 'facebox', 'rails', application_js_path %>
+  <%= javascript_include_tag 'jquery.min', 'jquery-ui-custom.min', 'facebox', 'rails', application_js_path %>
   <%= yield :head %>
   <%= csrf_meta_tag %>
 </head>
