--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,16 +14,10 @@ pre {
   font-size: 11px;
 }
 
-a { color: black; }
-
-a:visited { color: #666; }
-
-a:hover { color: #44cd51; }
-
 div.field, div.actions { margin-bottom: 10px; }
 
 #notice, #offer_notice {
-  color: green;
+  color: #44cd51;
   margin-bottom: 5px;
 }
 
@@ -157,4 +151,9 @@ td {
   margin-top: 10px; 
   text-align: center; 
   font-size: small;
+}
+
+h1 { 
+  color: #44cd51;
+  font-size: 18pt; 
 }
