--- a/app/views/feedback/index.html.erb
+++ b/app/views/feedback/index.html.erb
@@ -2,6 +2,6 @@
 
 <h1>Penny for Your Thoughts?</h1>
 
-<p>Help us make shareon.it better for you!</p>
+<p>Help us make Shareon.it better for you!</p>
 
 <%= render :partial => 'form' %>
