--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -8,8 +8,8 @@
 
 <%= will_paginate @postings %>
 
-<table id="posting_list">
-  <tr>
+<table id="posting_list" class="ui-widget ui-widget-content">
+  <tr class="ui-widget-header">
     <th>Description</th>
     <th>From date</th>
     <th>To date</th>
