--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -66,7 +66,7 @@ div.field, div.actions { margin-bottom: 10px; }
 
 #login {
   text-align: right;
-  padding-top: 5px;
+  margin-top: 15px;
 }
 
 #content {
@@ -79,7 +79,6 @@ div.field, div.actions { margin-bottom: 10px; }
 #search { margin-bottom: 10px; }
 
 ul.nav {
-	width: 100%;
 	float: left;
 	padding: 0;
 	list-style: none;
