--- a/public/stylesheets/blueprint/screen.css
+++ b/public/stylesheets/blueprint/screen.css
@@ -62,7 +62,7 @@ table {margin-bottom:1.4em;width:100%;}
 th {font-weight:bold;}
 thead th {background:white;}
 th, td, caption {padding:4px 10px 4px 5px;}
-tbody tr:nth-child(even) td, tbody tr.even td {background:#f5f5f5;}
+tbody tr:nth-child(even) td, tbody tr.even td {background: #E6FFE6;}
 tfoot {font-style:italic;}
 caption {background:#eee;}
 .small {font-size:.8em;margin-bottom:1.875em;line-height:1.875em;}
