Added loading gif for actions that send emails

--- a/app/views/feedback/index.html.erb
+++ b/app/views/feedback/index.html.erb
@@ -5,3 +5,5 @@
 <p>Help us make Shareon.it better for you!</p>
 
 <%= render :partial => 'form' %>
+
+<div id="loading"><%= image_tag 'loading.gif' %></div>
