Changed uswap stuff to shareon.it

--- a/app/views/notifier/offer.html.erb
+++ b/app/views/notifier/offer.html.erb
@@ -14,4 +14,4 @@ Hi <%= @to_user.first_name %>,
 Reply to this message to contact them and set up the trade!<br/><br/>
 
 Sincerely,<br/>
-The Uswap.it Team
+The Shareon.it Team
