--- a/app/views/notifier/welcome.html.erb
+++ b/app/views/notifier/welcome.html.erb
@@ -1,2 +1,2 @@
 Hi <%= @user.first_name %>,<br/><br/>
-Welcome to uswap.it: your one-stop shop for things you're not shopping for!
+Welcome to Shareon.it: your one-stop shop for things you're not shopping for!
