--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -3,19 +3,13 @@
   <p>
     I
     <% if params[:have_need] == 'have' %>
-      can provide
+      have
       <%= f.hidden_field :have_need, :value => 'have' %>
     <% else %>
       need
       <%= f.hidden_field :have_need, :value => 'need' %>
     <% end %>
-    <% if params[:product_service] == 'product' %>
-      <%= f.text_field :description, :placeholder => 'e.g. one ring to rule them all...' %>
-      <%= f.hidden_field :product_service, :value => 'product' %>
-    <% else %>
-      <%= f.text_field :description, :placeholder => 'e.g. nunchuck skillz' %>
-      <%= f.hidden_field :product_service, :value => 'service' %>
-    <% end %>
+    <%= f.text_field :description, :placeholder => 'e.g. one ring to rule them all...' %>
     <br/>
     available from <%= f.text_field :from_date, :placeholder => 'optional date', :class => 'date' %>
     to <%= f.text_field :to_date, :placeholder => 'optional date', :class => 'date' %>.
