--- a/app/views/postings/create.js.erb
+++ b/app/views/postings/create.js.erb
@@ -2,12 +2,12 @@
   $('#new_posting_form').html('<%= escape_javascript(render :partial => 'postings/form') %>');
 <% else %>
   $.facebox.close();
-  $('#notice').html('Posting successful.');
-  $('#posting_list > tbody > tr:first').after('<tr id="posting_<%= @posting.id %>"><%= escape_javascript(raw(posting_table_row(@posting))) %></tr>');
-  $('.buttonset').buttonset();
-  $('a[rel*=facebox]').facebox({
-    loadingImage : '<%= image_path('loading.gif') %>',
-    closeImage   : '<%= image_path('closelabel.png') %>'
-  });
+  $('#notice').html('Posting added to <%= escape_javascript link_to('your stuff', my_stuff_postings_path) %>.');
+//  $('#posting_list > tbody > tr:first').after('<tr id="posting_<%= @posting.id %>"><%= escape_javascript(raw(posting_table_row(@posting))) %></tr>');
+//  $('.buttonset').buttonset();
+//  $('a[rel*=facebox]').facebox({
+//    loadingImage : '<%= image_path('loading.gif') %>',
+//    closeImage   : '<%= image_path('closelabel.png') %>'
+//  });
 <% end %>
 
