--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
 </head>
 <body>
   <div id="header">
-    <div id="logo"><%= link_to image_tag('logo.gif'), root_path %></div>
+    <div id="header_content">
+      <%= link_to image_tag('logo.gif'), root_path %>
+    </div>
   </div>
   <div id="nav">
     <div id="nav_content">
