--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -68,13 +68,13 @@ div.field, div.actions { margin-bottom: 10px; }
   background-color: #6699ce;
 }
 
-#logo {
+#header_content {
   width: 950px;
   margin: 0 auto 0 auto;
   text-align: left;
 }
 
-#logo img {
+#header_content img {
   margin-top: 30px;
   padding: 20px;
   background-color: #404040;
@@ -85,7 +85,7 @@ div.field, div.actions { margin-bottom: 10px; }
 	border-color: #404040;
 }
 
-#logo a:hover {
+#header_content a:hover {
   background-color: transparent;
 }
 
