--- a/app/views/notifier/feedback.html.erb
+++ b/app/views/notifier/feedback.html.erb
@@ -1,3 +1,8 @@
 <h1>Feedback</h1>
-<h2><%= @user.email %> says</h2>
+<% if @user %>
+  <%= @user.full_name %> at <%= @user.email %> says:
+<% else %>
+  Anonymous says:
+<% end %>
+<br/>
 <%= @message %>
