--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -64,7 +64,7 @@ div.field, div.actions { margin-bottom: 10px; }
 
 #header { 
   width: 100%;
-  height: 150px;
+  height: 125px;
   background-color: #6699ce;
 }
 
@@ -75,7 +75,9 @@ div.field, div.actions { margin-bottom: 10px; }
 }
 
 #header_content img {
-  margin-top: 30px;
+  width: 449px;
+  height: 60px;
+  margin-top: 11px;
   padding: 20px;
   background-color: #404040;
 	-moz-border-radius: 10px 10px 10px 10px;
@@ -143,7 +145,7 @@ div.field, div.actions { margin-bottom: 10px; }
 }
 
 #login {
-  padding: 15px 0 0 0;
+  padding: 15px 10px 0 0;
   margin: 0;
   float: right;
   text-align: right; 
